[workspace]
members = ["tor_util", "protover", "smartlist", "external", "tor_allocate", "tor_rust"]

# Can remove panic="abort" when this issue is fixed:
# https://github.com/rust-lang/rust/issues/52652
[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"

[profile.test]
panic = "abort"

[profile.bench]
panic = "abort"
