[package]
authors = ["The Tor Project",
           "Isis Lovecruft <isis@torproject.org>"]
name = "crypto"
version = "0.0.1"
publish = false
build = "../build.rs"

[lib]
name = "crypto"
path = "lib.rs"
crate_type = ["rlib", "staticlib"]

[dependencies]
libc = "=0.2.39"
digest = "=0.7.2"
rand_core = { version = "=0.2.0-pre.0", default-features = false }

external = { path = "../external" }
smartlist = { path = "../smartlist" }
tor_allocate = { path = "../tor_allocate" }
tor_log = { path = "../tor_log" }

[dev-dependencies]
rand = { version = "=0.5.0-pre.2", default-features = false }
rand_core = { version = "=0.2.0-pre.0", default-features = false }

[features]
