[package]
authors = ["The Tor Project"]
version = "0.0.1"
name = "protover"

[features]

[dependencies]
libc = "=0.2.39"

[dependencies.smartlist]
path = "../smartlist"

[dependencies.external]
path = "../external"

[dependencies.tor_util]
path = "../tor_util"

[dependencies.tor_allocate]
path = "../tor_allocate"

[dependencies.tor_log]
path = "../tor_log"

[lib]
name = "protover"
path = "lib.rs"
crate_type = ["rlib", "staticlib"]

