EXTRA_DIST = tor-spec.txt HACKING rend-spec.txt control-spec.txt dir-spec.txt socks-extensions.txt tor-doc-win32.html tor-doc-osx.html tor-doc-unix.html tor-doc-server.html tor-switchproxy.html tor-hidden-service.html stylesheet.css tor-resolve.1 version-spec.txt tor-osx-dmg-creation.txt tor-rpm-creation.txt

man_MANS = tor.1 tor-resolve.1

SUBDIRS = design-paper

DIST_SUBDIRS = design-paper
