EXTRA_DIST = tor-spec.txt FAQ HACKING rend-spec.txt control-spec.txt dir-spec.txt tor-doc.html tor-doc.css tor-doc-win32.html tor-doc-osx.html tor-switchproxy.html tor-hidden-service.html tor-resolve.1 version-spec.txt

man_MANS = tor.1 tor-resolve.1

SUBDIRS = design-paper

DIST_SUBDIRS = design-paper
