confdir = $(sysconfdir)/tor

EXTRA_DIST = PrivoxyConfDesc.plist PrivoxyConfInfo.plist    \
    ReadMe.rtf StartupParameters.plist Tor TorBundleDesc.plist.in        \
    TorBundleInfo.plist.in TorBundleWelcome.rtf TorDesc.plist.in        \
    TorInfo.plist.in TorStartupDesc.plist.in TorStartupInfo.plist            \
    package.sh privoxy.config TorPostflight addsysuser 	\
    Tor_Uninstaller.applescript uninstall_tor_bundle.sh tor-resolve.pdf \
    tor-reference.pdf
