confdir = $(sysconfdir)/tor

EXTRA_DIST = License.rtf PrivoxyConfDesc.plist PrivoxyConfInfo.plist    \
    ReadMe.rtf StartupParaeters.plist Tor TorBundleDesc.plist.in        \
    TorBundleInfo.plist.in TorBundleWelcome.rtf TorDesc.plist.in        \
    TorInfo.plist. TorStartupDesc.plist TorStartupInfo.plist            \
    package.sh privoxy.config

